--- a/HadayIMWpfControls/HadayIMWpfControls/WPFControls/Chat/UserInfo.xaml
+++ b/HadayIMWpfControls/HadayIMWpfControls/WPFControls/Chat/UserInfo.xaml
@@ -26,7 +26,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Image x:Name="headImage" Grid.ColumnSpan="2" Source="{Binding UserImage}" Width="62" Height="62" Margin="12,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill" Clip="{StaticResource clipGeometry}"></Image>
-        <StackPanel Grid.ColumnSpan="2" Orientation="Horizontal"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Opacity="0.5" Visibility="Collapsed" >
+        <!--<StackPanel Grid.ColumnSpan="2" Orientation="Horizontal"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Opacity="0.5" Visibility="Collapsed" >
             <Button  Width="20" Height="20" BorderThickness="0" Background="Transparent" HorizontalAlignment="Right" VerticalAlignment="Top" >
                 <Path   Width="12"
                             Height="3"
@@ -45,7 +45,7 @@
                             Opacity="0.8"
                             Stretch="Fill" />
             </Button>
-        </StackPanel>
+        </StackPanel>-->
         <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Orientation="Horizontal">
             <Image   Source="../Images/user_icon.png" Width="18" Height="18" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="Fill" Opacity="0.4" ></Image>
             <TextBlock x:Name="numberTextBlock" VerticalAlignment="Center" Margin="10,0" Text="{Binding UserID}"></TextBlock>
