--- a/HadayIMWpfControls/HadayIMWpfControls/WPFControls/Chat/ChatList.xaml
+++ b/HadayIMWpfControls/HadayIMWpfControls/WPFControls/Chat/ChatList.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:HadayIMWpfControls.WPFControls"
              xmlns:helper="clr-namespace:HadayIMWpfControls.WPFControls.Helper"
              xmlns:gif="http://wpfanimatedgif.codeplex.com"
+             gif:ImageBehavior.AnimateInDesignMode="True"             
              mc:Ignorable="d" FontSize="12" FontFamily="Microsoft YaHei"
              d:DesignHeight="450" d:DesignWidth="800" Drop="UserControl_Drop" AllowDrop="True">
     <UserControl.Resources>
@@ -170,7 +171,7 @@
                         <Image Source="{Binding Message,Converter={StaticResource ConverterStringToIamgeSource}}" Stretch="Uniform" MaxHeight="100" MaxWidth="100" MouseLeftButtonDown="Image_MouseUp" helper:ImageStretchHelper.ImageStretch="{Binding Message}" 
                                gif:ImageBehavior.AnimatedSource="{Binding Message,Converter={StaticResource ConverterStringToIamgeSource}}"
                                gif:ImageBehavior.RepeatBehavior="Forever"
-                               gif:ImageBehavior.AutoStart="True"
+                               gif:ImageBehavior.AutoStart="True"                               
                                ></Image>                    
                     </Border>
                 </Grid>
@@ -179,9 +180,9 @@
                 <local:Loading  Grid.Column="2" Margin="10" Visibility="{Binding ImageState,Converter={StaticResource ConverterImageStateToProgressVisiblel}}"></local:Loading>
                 <Popup PopupAnimation="Fade" PlacementTarget="{Binding ElementName=headImageLeft}" Placement="Left" AllowsTransparency="True" StaysOpen="False" >
                     <local:UserInfo x:Name="leftUserInfo" Padding="10" DataContext="{Binding UserInfo}" SendMessage="leftUserInfo_SendMessage">
-                        <!--<local:UserInfo.Effect>
+                        <local:UserInfo.Effect>
                             <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="0" Opacity="1" />
-                        </local:UserInfo.Effect>-->
+                        </local:UserInfo.Effect>
                     </local:UserInfo>
                 </Popup>
             </Grid>
@@ -635,18 +636,11 @@
         <ItemsControl x:Name="listBox" ItemTemplateSelector="{StaticResource clts}"  VirtualizingStackPanel.VirtualizationMode="Recycling" VirtualizingStackPanel.IsVirtualizing="True">
             <ItemsControl.Template>
                 <ControlTemplate>
-                    <ScrollViewer x:Name="scrollViewer" Padding="{TemplateBinding Padding}" ScrollChanged="ScrollViewer_ScrollChanged">
-                        <ItemsPresenter  x:Name="itemsPresenter"/>
+                    <ScrollViewer x:Name="scrollViewer" Padding="{TemplateBinding Padding}" ScrollChanged="ScrollViewer_ScrollChanged" VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling">
+                        <ItemsPresenter  x:Name="itemsPresenter" VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling"/>
                     </ScrollViewer>
                 </ControlTemplate>
-            </ItemsControl.Template>
-
-            <!--<ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <helper:VirtualizingWrapPanel ScrollOffset="50" ChildHeight="440" ></helper:VirtualizingWrapPanel>
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>-->
-
+            </ItemsControl.Template> 
         </ItemsControl>
         <Border x:Name="newMassageBorder" Grid.Row="1" Height="25"    Background="#badaf8"  VerticalAlignment="Bottom" Margin="0,0,17,0" MouseDown="Border_MouseDown" Cursor="Hand" Visibility="Collapsed">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5,0">
