--- a/HadayIMWpfControls/HadayIMWpfControls/WPFControls/Test/ChatListTest.xaml
+++ b/HadayIMWpfControls/HadayIMWpfControls/WPFControls/Test/ChatListTest.xaml
@@ -19,8 +19,8 @@
             <Button Width="100" Click="Button_Click_2">新消息提示</Button>
             <Button Width="100" Click="Button_Click_3">插入100图文消息</Button>
             <Button Width="100" Click="Button_Click_4">插入输入图文置顶</Button>
-            <Button Width="100" Click="Button_Click_5">插入左消息</Button>
-            <Button Width="80" Click="Button_Click_6">插入右消息</Button>          
+            <Button Width="120" Click="Button_Click_5">插入左消息显示名字</Button>
+            <Button Width="120" Click="Button_Click_6">插入右消息显示名字</Button>          
         </StackPanel>
         <TextBox Grid.Row="3" Margin="10" x:Name="textBox" Loaded="textBox_Loaded"></TextBox>
     </Grid>
